# rmq-cluster-rebalance

./: .gitignore  CONTRIBUTING.md  README.rst  bootstrap  docker-compose.yml  setup.cfg
.circleci/: config.yml
requires/: testing.txt
rmq_cluster_rebalance/: __init__.py  __main__.py
tests/: test_rebalance.py
