[metadata]
name = rmq-cluster-rebalance
version = attr: rmq_cluster_rebalance.version
description = A Postgres SQL Formatter
long_description = file: README.rst
license = BSD 3-Clause License
url = https://github.com/gmr/rmq_cluster_rebalance
author = Gavin M. Roy
author_email = gavinmroy@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Utilities

[options]
include_package_data = True
install_requires =
    coloredlogs
    requests
packages = rmq_cluster_rebalance
zip_safe = True

[options.entry_points]
console_scripts =
    rmq-cluster-rebalance = rmq_cluster_rebalance.__main__:main

[options.package_data]
* = LICENSE, README.rst

[coverage:run]
branch = True
data_file = build/.coverage

[flake8]
application-import-names = rmq_cluster_rebalance
exclude = build,ci,env
import-order-style = google

[mypy]
ignore_errors = True

[mypy-arrow]
ignore_missing_imports = True

[mypy-rmq_cluster_rebalance]
ignore_errors = True

[nosetests]
cover-branches = 1
cover-html = true
cover-html-dir = build/coverage/html
cover-package = rmq_cluster_rebalance
cover-xml = true
cover-xml-file = build/coverage/results.xml
logging-level = DEBUG
verbosity = 2
with-coverage = 1
with-xunit = true
xunit-file = build/nose/results.xml
